--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,9 +1,3 @@
 auth:
   pocket:
-    redirect_uri: ${BACKEND_URL}/pocket/auth/token
-
-spring:
-  server:
-    port: ${PORT:8081}
-    servlet:
-      context-path: /pocketstats
+    redirect_uri: ${VUE_APP_BACKEND_URL}/pocket/auth/token
