--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,8 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   build:
-    #    needs:
-    #      - tests
+    needs:
+     - tests
     runs-on: ubuntu-latest
     environment: master
     steps:
@@ -74,3 +74,10 @@ jobs:
           ssh pocketstats@38.242.142.123 'systemctl status pocketstats.service'
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Health check
+        run: |
+          echo "Waiting for 30 seconds before healthcheck"
+          sleep 30
+          echo "Performing healthcheck"
+          wget --retry-connrefused --waitretry=5 --read-timeout=20 --timeout=15 -t 10 http://38.242.142.123:8080/pocketstats/actuator/health -O /dev/null
+        shell: bash
