--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
+    "apexcharts": "3.22.3",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "bootstrap-vue-3": "^0.5.1",
@@ -23,8 +24,10 @@
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
     "vue-chartjs": "^5.0.0",
-    "vue-class-component": "^8.0.0-0",
+    "vue-class-component": "^8.0.0-rc.1",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^4.0.3",
+    "vue3-apexcharts": "^1.4.1",
     "vue3-datepicker": "^0.3.4",
     "vuex": "^4.0.0"
   },
