--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.env
+*.env
+
 # Compiled class file
 *.class
 
@@ -171,3 +174,4 @@ src/main/java/eu/cybershu/pocketstats/pocket/api/.DS_Store
 src/.DS_Store
 src/main/.DS_Store
 src/main/raporting/.DS_Store
+!/.env
