--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ repositories {
 
 ext {
     mapstructVersion = "1.5.3.Final"
+    jacksonVersion = "2.17.0"
     lombokVersion = "1.18.20"
     lombokMapstructBindingVersion = "0.2.0"
 }
@@ -38,10 +39,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'commons-validator:commons-validator:1.8.0'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.17.0'
-    implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.17.0'
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.0'
+
+    implementation("com.fasterxml.jackson:jackson-bom:${jacksonVersion}")
+    implementation("com.fasterxml.jackson.core:jackson-core:${jacksonVersion}")
+    implementation("com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}")
+    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}")
+
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
@@ -55,6 +58,8 @@ dependencies {
             "org.projectlombok:lombok:${lombokVersion}",
             "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"
     implementation 'com.google.guava:guava:31.1-jre'
+
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
 
     //	Tests
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
