--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -8,44 +8,44 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
-    "@fortawesome/free-regular-svg-icons": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
-    "@fortawesome/vue-fontawesome": "^3.0.3",
-    "apexcharts": "3.22.3",
-    "axios": "^1.3.3",
-    "bootstrap": "^5.2.3",
-    "bootstrap-vue-3": "^0.5.1",
-    "chart.js": "^4.0.0",
-    "core-js": "^3.8.3",
-    "date-fns": "^2.29.3",
-    "pinia": "^2.0.32",
-    "rxjs": "^7.8.0",
-    "vue": "^3.2.47",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "apexcharts": "3.54.1",
+    "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
+    "bootstrap-vue-3": "^0.3.12",
+    "chart.js": "^4.4.5",
+    "core-js": "^3.38.1",
+    "date-fns": "^4.1.0",
+    "pinia": "^2.2.4",
+    "rxjs": "^7.8.1",
+    "vue": "^3.5.12",
     "vue-axios": "^3.5.2",
-    "vue-chartjs": "^5.0.0",
+    "vue-chartjs": "^5.3.1",
     "vue-class-component": "^8.0.0-rc.1",
     "vue-property-decorator": "^9.1.2",
-    "vue-router": "^4.0.3",
-    "vue3-apexcharts": "^1.4.1",
-    "vue3-datepicker": "^0.3.4",
-    "vuex": "^4.0.0"
+    "vue-router": "^4.4.5",
+    "vue3-apexcharts": "^1.7.0",
+    "vue3-datepicker": "^0.4.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-typescript": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "@vue/eslint-config-typescript": "^9.1.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "typescript": "~4.5.5"
+    "@babel/core": "^7.25.8",
+    "@babel/eslint-parser": "^7.25.8",
+    "@typescript-eslint/eslint-plugin": "^8.10.0",
+    "@typescript-eslint/parser": "^8.10.0",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-plugin-typescript": "~5.0.8",
+    "@vue/cli-plugin-vuex": "~5.0.8",
+    "@vue/cli-service": "^3.3.1",
+    "@vue/eslint-config-typescript": "^14.1.1",
+    "eslint": "^9.13.0",
+    "eslint-plugin-vue": "^9.29.1",
+    "typescript": "~5.6.3"
   },
   "eslintConfig": {
     "root": true,
