--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -1,6 +1,16 @@
+logging:
+  level:
+    eu.cybershu: INFO
+
 auth:
   pocket:
     redirect_uri: ${BACKEND_URL}/pocket/auth/token
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: [ 'health', 'info' ]
 
 spring:
   server:
