--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -1,5 +1,6 @@
 management:
   endpoints:
+    enabled-by-default: true
     web:
       exposure:
-        include: [ 'health', 'info', 'env','logfile', 'loggers', 'endpoints' ]
+        include: [ 'health', 'info', 'env','logfile', 'loggers', 'endpoints', 'heapdump', 'threadump' ]
