--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,7 +21,10 @@ server:
   error:
     include-binding-errors: always
 
+
 spring:
+  main:
+    lazy-initialization: true
   server:
     port: ${PORT:8081}
     servlet:
