--- a/src/main/docker/docker-compose.yml
+++ b/src/main/docker/docker-compose.yml
@@ -1,4 +1,5 @@
-version: '3.6'
+name: pocketstats-dev
+
 services:
   mongodb:
     image: mongo:latest
@@ -11,3 +12,4 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=admin
     volumes:
       - ./mongo-entrypoint:/docker-entrypoint-initdb.d
+      - ./docker/mongodb_data:/data/db
