Reader and pocket api fixes WIP: sync (problem with status mappings into `item`) collection

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -3,4 +3,4 @@ management:
     enabled-by-default: true
     web:
       exposure:
-        include: [ 'health', 'info', 'env','logfile', 'loggers', 'endpoints', 'heapdump', 'threadump' ]
+        include: [ 'health', 'info', 'env','logfile', 'loggers', 'endpoints', 'ratelimiters', 'threadump' ]
