--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,23 +12,24 @@ jobs:
     environment: master
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Set up Java
-        uses: actions/setup-java@v3.9.0
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
           check-latest: true
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: 16
       - name: Build backend and analyse
-        uses: gradle/gradle-build-action@v2.4.0
+        uses: gradle/gradle-build-action@v3
         with:
           gradle-version: current
           arguments: build jacocoTestReport sonar --info -Dsonar.organization=michmzr  -Dsonar.projectKey=michmzr_PocketStats  -Dsonar.host.url=https://sonarcloud.io  -Dsonar.verbose=true
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          READER_ACCESS_TOKEN: ${{ secrets.READER_ACCESS_TOKEN }}
   build:
     needs:
      - tests
@@ -36,23 +37,23 @@ jobs:
     environment: master
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Set up Java
-        uses: actions/setup-java@v3.9.0
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
           check-latest: false
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4
         with:
           node-version: 16
       - name: Build backend
-        uses: gradle/gradle-build-action@v2.4.0
+        uses: gradle/gradle-build-action@v3
         with:
           gradle-version: current
           arguments: build -x test
       - name: Upload backend JAR artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: app.jar
           path: ./build/libs/app.jar
