--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,11 +80,9 @@ jobs:
           ssh pocketstats@${{secrets.SSH_HOST}} 'systemctl status pocketstats.service'
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: Health check
-        shell: bash
-        run: |
-          echo "Waiting for 30 seconds before healthcheck"
-          sleep 30
-          echo "Performing healthcheck..."
-          wget --retry-connrefused --waitretry=5 --read-timeout=20 --timeout=15 -t 10 http://${{secrets.SSH_HOST}}:8080/pocketstats/actuator/health -O /dev/null
+      - name: Check the deployed service URL
+        uses: jtalk/url-health-check-action@v4
+        with:
+          # Check the following URLs one by one sequentially
+          url: ${{secrets.APP_URL}}
 
