Fix gradle setup and run in workflow (#25)
* Fix gradle setup and run in workflow

* Fixes

* Use app_url instead of actuator for testing health check

* Wait for checkckeck

--- a/.github/workflows/redeploy.yml
+++ b/.github/workflows/redeploy.yml
@@ -29,10 +29,12 @@ jobs:
           ssh pocketstats@${{secrets.SSH_HOST}} 'systemctl status pocketstats.service'
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-      - name: Health check
+      - shell: bash
         run: |
           echo "Waiting for 30 seconds before healthcheck"
           sleep 30
-          echo "Performing healthcheck..."
-          wget --retry-connrefused --waitretry=5 --read-timeout=20 --timeout=15 -t 10 https://${{secrets.SSH_HOST}}:8080/pocketstats/actuator/health -O /dev/null
-        shell: bash
+      - name: Check the deployed service URL
+        uses: jtalk/url-health-check-action@v4
+        with:
+          # Check the following URLs one by one sequentially
+          url: ${{secrets.APP_URL}}
